@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
title Modelo Conceptual — Plataforma de Cursos Online

class Usuario {
  +idUsuario
  +nombre
  +email
  +rol  ' "ALUMNO" | "PROFESOR"
}

class Curso {
  +idCurso
  +titulo
  +descripcion
}

class Matricula {
  +idMatricula
  +fechaAlta
  +estado  ' "ACTIVA" | "PENDIENTE" | "BAJA"
}

class Pago {
  +idPago
  +fechaPago
  +importe
  +metodo  ' "TARJETA" | "TRANSFERENCIA" | "PAYPAL"
}

' Relaciones
Usuario "1" -- "0..*" Matricula : realiza >
Curso  "1" -- "0..*" Matricula : corresponde a >
Matricula "1" -- "0..*" Pago : origina >
@enduml
